# sokol-experiment

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
cmake/: sokol.cmake
emscripten/: index.html  local_server.py
scripts/macos/: entitlements.cmake
sokol/: sokol.cmake  sokol.cpp  sokol_for_cli.cpp  sokol_for_tests.cpp  sokol_impl.cpp  sokol_impl.mm
sokol/include/sokol/: log.h
src/: main.cpp  sokol.cpp  sokol.mm
src/common/: bits.h  common.h  defer.h  io.cpp  io.h  mt_queue.h  queue.h  slog.h  struct.h  sync.cpp  sync.h  thread.cpp  thread.h  thread_name.h  thread_pool.cpp  thread_pool.h
src/common/tests/: bits_test.cpp  common_test.h  defer_test.cpp  io_test.cpp  queue_test.cpp  sync_test.cpp  thread_test.cpp
src/hl1/: bsp.cpp  bsp.h  bsp_display.h  wad3.cpp  wad3.h  wad_display.cpp  wad_display.h
src/shaders/: quad_shader.glsl  quad_shader.glsl.h
utils/: quake-unpack.cpp  quake-unpak.cpp
